<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bill.QuanLy_DonDat"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtViewQuanLyDonDat"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtViewQuanLyDonDatXe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtTextnhapMaDDH"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hintNhapMaDDH" />

        <Button
            android:id="@+id/btnLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lọc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="Loc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chbDonTrongNgay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewDonTrongNgay" />

            <CheckBox
                android:id="@+id/chbDonTrongThang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewDonTrongThang" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chbGiaiDoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewGiaiDoan" />

                <EditText
                    android:id="@+id/edtTextThgianBatDau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="dd/mm/yyyy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/edtTextThgianKetThuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="dd/mm/yyyy" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewSapXep"/>

        <CheckBox
            android:id="@+id/chbTongTienTangDan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewTongTienTangDan" />

        <CheckBox
            android:id="@+id/chbTongTienGiamDan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewTongTienGiamDan" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tblayoutBang"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtViewMaDDH" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtViewNgayDat" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/hoTenKH" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tongTien" />

        </TableRow>

    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnThemDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                />

            <TextView
                android:id="@+id/txtViewThemDDX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/iconQLDDX"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/QLDDX" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="50dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCTDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtViewChiTietDDX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconQLDDX"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QLDDX" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>